tests/machine/x/pl/closure.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/closure.pl:8: user:main is/2: Arguments are not sufficiently instantiated

